@@ -5,32 +5,33 @@ import com.itmo.java.basics.console.ExecutionEnvironment;
 import com.itmo.java.basics.logic.Database;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 
 public class ExecutionEnvironmentImpl implements ExecutionEnvironment {
-    private final DatabaseConfig config;
-    private final Map<String, Database> databases;
+
+    private final DatabaseConfig dbConfig;
+    private final Map<String, Database> dataBase ;
 
     public ExecutionEnvironmentImpl(DatabaseConfig config) {
-        this.config = config;
-        databases = new HashMap<>();
+
+        dbConfig = config;
+        dataBase = new HashMap<>();
     }
 
     @Override
     public Optional<Database> getDatabase(String name) {
-        return Optional.ofNullable(databases.get(name));
+        return Optional.ofNullable(dataBase.get(name));
     }
 
     @Override
     public void addDatabase(Database db) {
-        databases.put(db.getName(), db);
+        dataBase.put(db.getName(), db);
     }
 
     @Override
     public Path getWorkingPath() {
-        return Paths.get(config.getWorkingPath());
+        return Path.of(dbConfig.getWorkingPath());
     }
 }
